[tool.poetry]
name = "pytorch-ntm"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
argcomplete = "^1.12.3"
attrs = "19.1.0"
torch = "^1.9.1"
numpy = "^1.21.2"
attr = "^0.3.1"
plotly = "^5.3.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
